# persona

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  TESTS.md  build.rs  flake.nix  skills.md
examples/: component-status.nota  engine-status.nota  persona-document.nota  persona-object.nota
reports/: 2026-05-06-gas-city-harness-design.md  2026-05-06-persona-core-state-machine.md  2026-05-07-persona-desktop-control-plane.md
schema/: daemon.schema  persona.concept.schema
scripts/: persona-daemon-three-harness-chain-smoke  persona-dev-stack  persona-dev-stack-chain  persona-engine-sandbox  persona-engine-sandbox-attach  persona-engine-sandbox-auth-isolation-witness  persona-engine-sandbox-terminal-cell-smoke
src/: actor.rs  configuration.rs  daemon.rs  direct_process.rs  engine.rs  engine_event.rs  error.rs  generated_contract.rs  lib.rs  main.rs  manager.rs  manager_store.rs  readiness.rs  request.rs  schema.rs  state.rs  supervision_readiness.rs  supervisor.rs  transport.rs  unit.rs  upgrade.rs
src/launch/: command.rs  configuration.rs  mod.rs  resolver.rs
src/schema/: daemon.rs  mod.rs  reports.rs
tests/: actor_discipline_truth.rs  daemon.rs  direct_process.rs  engine.rs  handoff.rs  kameo_actor_path.rs  manager.rs  manager_store.rs  meta_testing.rs  readiness.rs  request.rs  schema.rs  state.rs  supervisor.rs  unit.rs
tests/support/: mod.rs
