[package]
name         = "persona"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona"
description  = "Engine manager and apex integration repo for multi-harness AI systems."

[lib]
name = "persona"
path = "src/lib.rs"

[[bin]]
name = "persona"
path = "src/main.rs"

[[bin]]
name = "persona-daemon"
path = "src/bin/persona_daemon.rs"

[dependencies]
kameo                  = { version = "0.20", default-features = false }
libc                   = "0.2"
nota-codec             = { git = "https://github.com/LiGoldragon/nota-codec.git", branch = "main" }
owner-signal-version-handover = { git = "https://github.com/LiGoldragon/owner-signal-version-handover.git", branch = "main" }
redb                   = "4"
rkyv                   = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema                   = { git = "https://github.com/LiGoldragon/sema.git" }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-version-handover = { git = "https://github.com/LiGoldragon/signal-version-handover.git", branch = "main" }
signal-core            = { git = "https://github.com/LiGoldragon/signal-core.git" }
signal-persona          = { git = "https://github.com/LiGoldragon/signal-persona.git" }
signal-persona-auth     = { git = "https://github.com/LiGoldragon/signal-persona-auth.git" }
signal-persona-harness    = { git = "https://github.com/LiGoldragon/signal-persona-harness.git" }
signal-persona-introspect = { git = "https://github.com/LiGoldragon/signal-persona-introspect.git" }
signal-persona-mind       = { git = "https://github.com/LiGoldragon/signal-persona-mind.git" }
signal-persona-message    = { git = "https://github.com/LiGoldragon/signal-persona-message.git" }
signal-persona-router     = { git = "https://github.com/LiGoldragon/signal-persona-router.git" }
signal-persona-system     = { git = "https://github.com/LiGoldragon/signal-persona-system.git" }
signal-persona-terminal   = { git = "https://github.com/LiGoldragon/signal-persona-terminal.git" }
strum                  = { version = "0.28", features = ["derive"] }
thiserror              = "2"
tokio                  = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "time"] }
version-projection     = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main" }

# ─── Wire-test shim binaries (for nix-chained tests) ──────
# These exercise signal-persona-message end-to-end through
# real bytes on stdout/stdin.

[[bin]]
name = "wire-emit-message"
path = "src/bin/wire_emit_message.rs"

[[bin]]
name = "wire-decode-message"
path = "src/bin/wire_decode_message.rs"

[[bin]]
name = "wire-emit-message-reply"
path = "src/bin/wire_emit_message_reply.rs"

[[bin]]
name = "wire-decode-message-reply"
path = "src/bin/wire_decode_message_reply.rs"

[[bin]]
name = "wire-router-client"
path = "src/bin/wire_router_client.rs"

[[bin]]
name = "wire-tap-router"
path = "src/bin/wire_tap_router.rs"

[[bin]]
name = "persona-component-fixture"
path = "src/bin/persona_component_fixture.rs"

[lints.rust]
unused = "warn"
dead_code = "warn"
