[package]
name         = "persona"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona"
description  = "Engine manager and apex integration repo for multi-harness AI systems."
build        = "build.rs"

[lib]
name = "persona"
path = "src/lib.rs"

[[bin]]
name = "persona"
path = "src/main.rs"

[[bin]]
name = "persona-daemon"
path = "src/bin/persona_daemon.rs"

[dependencies]
kameo                  = { version = "0.20", default-features = false }
libc                   = "0.2"
meta-signal-upgrade    = { git = "https://github.com/LiGoldragon/meta-signal-upgrade.git", branch = "main", features = ["nota-text"] }
nota-next              = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main" }
meta-signal-persona   = { git = "https://github.com/LiGoldragon/meta-signal-persona.git", branch = "main" }
rkyv                   = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine            = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-engine-management = { git = "https://github.com/LiGoldragon/signal-engine-management.git", branch = "main" }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main" }
signal-harness            = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "main" }
signal-introspect         = { git = "https://github.com/LiGoldragon/signal-introspect.git", branch = "main" }
signal-message            = { git = "https://github.com/LiGoldragon/signal-message.git", branch = "main" }
signal-mind               = { git = "https://github.com/LiGoldragon/signal-mind.git", branch = "main" }
signal-persona-origin     = { git = "https://github.com/LiGoldragon/signal-persona-origin.git", branch = "main" }
signal-router             = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "main" }
signal-system             = { git = "https://github.com/LiGoldragon/signal-system.git", branch = "main" }
signal-terminal           = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "main" }
strum                  = { version = "0.28", features = ["derive"] }
thiserror              = "2"
tokio                  = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "time"] }
triad-runtime          = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "main" }
unix-ancillary         = "0.2"
upgrade                = { git = "https://github.com/LiGoldragon/upgrade.git", branch = "main" }
version-projection     = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "main" }
zbus                   = { version = "5.15", default-features = false, features = ["tokio"] }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[dev-dependencies]
schema-next = { git = "https://github.com/LiGoldragon/schema-next.git", branch = "main" }
signal-sema = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "main" }
signal-upgrade = { git = "https://github.com/LiGoldragon/signal-upgrade.git", branch = "main" }

# ─── Wire-test shim binaries (for nix-chained tests) ──────
# These exercise signal-message end-to-end through
# real bytes on stdout/stdin.

[[bin]]
name = "wire-emit-message"
path = "src/bin/wire_emit_message.rs"

[[bin]]
name = "wire-decode-message"
path = "src/bin/wire_decode_message.rs"

[[bin]]
name = "wire-emit-message-reply"
path = "src/bin/wire_emit_message_reply.rs"

[[bin]]
name = "wire-decode-message-reply"
path = "src/bin/wire_decode_message_reply.rs"

[[bin]]
name = "wire-router-client"
path = "src/bin/wire_router_client.rs"

[[bin]]
name = "wire-tap-router"
path = "src/bin/wire_tap_router.rs"

[[bin]]
name = "persona-component-fixture"
path = "src/bin/persona_component_fixture.rs"

[lints.rust]
unused = "warn"
dead_code = "warn"
