[package]
name         = "persona"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/persona"
description  = "Engine manager and apex integration repo for multi-harness AI systems."
build        = "build.rs"

[lib]
name = "persona"
path = "src/lib.rs"

[[bin]]
name = "persona"
path = "src/main.rs"

[[bin]]
name = "persona-daemon"
path = "src/bin/persona_daemon.rs"

[[bin]]
name = "persona-write-configuration"
path = "src/bin/persona_write_configuration.rs"

[dependencies]
kameo                  = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main", default-features = false }
libc                   = "0.2"
message                = { git = "https://github.com/LiGoldragon/message.git", branch = "drop-next" }
meta-signal-upgrade    = { git = "https://github.com/LiGoldragon/meta-signal-upgrade.git", branch = "drop-next", features = ["nota-text"] }
nota              = { git = "https://github.com/LiGoldragon/nota.git", branch = "main" }
meta-signal-persona   = { git = "https://github.com/LiGoldragon/meta-signal-persona.git", branch = "drop-next" }
rkyv                   = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
sema-engine            = { git = "https://github.com/LiGoldragon/sema-engine.git", branch = "main" }
signal-frame           = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "drop-next" }
signal-harness            = { git = "https://github.com/LiGoldragon/signal-harness.git", branch = "drop-next" }
signal-introspect         = { git = "https://github.com/LiGoldragon/signal-introspect.git", branch = "drop-next" }
signal-message            = { git = "https://github.com/LiGoldragon/signal-message.git", branch = "drop-next" }
signal-mind               = { git = "https://github.com/LiGoldragon/signal-mind.git", branch = "drop-next" }
signal-persona            = { git = "https://github.com/LiGoldragon/signal-persona.git", branch = "drop-next" }
signal-router             = { git = "https://github.com/LiGoldragon/signal-router.git", branch = "drop-next" }
signal-system             = { git = "https://github.com/LiGoldragon/signal-system.git", branch = "drop-next" }
signal-terminal           = { git = "https://github.com/LiGoldragon/signal-terminal.git", branch = "drop-next" }
strum                  = { version = "0.28", features = ["derive"] }
thiserror              = "2"
tokio                  = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net", "process", "time"] }
triad-runtime          = { git = "https://github.com/LiGoldragon/triad-runtime.git", branch = "drop-next" }
unix-ancillary         = "0.2"
upgrade                = { git = "https://github.com/LiGoldragon/upgrade.git", branch = "drop-next" }
version-projection     = { git = "https://github.com/LiGoldragon/version-projection.git", branch = "drop-next" }
zbus                   = { version = "5.15", default-features = false, features = ["tokio"] }

[build-dependencies]
schema-rust = { git = "https://github.com/LiGoldragon/schema-rust.git", branch = "drop-next" }

[dev-dependencies]
schema = { git = "https://github.com/LiGoldragon/schema.git", branch = "drop-next" }
signal-sema = { git = "https://github.com/LiGoldragon/signal-sema.git", branch = "drop-next" }
signal-upgrade = { git = "https://github.com/LiGoldragon/signal-upgrade.git", branch = "drop-next" }

# ─── Wire-test shim binaries (for nix-chained tests) ──────
# These exercise signal-message end-to-end through
# real bytes on stdout/stdin.

[[bin]]
name = "wire-emit-message"
path = "src/bin/wire_emit_message.rs"

[[bin]]
name = "wire-decode-message"
path = "src/bin/wire_decode_message.rs"

[[bin]]
name = "wire-emit-message-reply"
path = "src/bin/wire_emit_message_reply.rs"

[[bin]]
name = "wire-decode-message-reply"
path = "src/bin/wire_decode_message_reply.rs"

[[bin]]
name = "wire-router-client"
path = "src/bin/wire_router_client.rs"

[[bin]]
name = "wire-tap-router"
path = "src/bin/wire_tap_router.rs"

[[bin]]
name = "persona-component-fixture"
path = "src/bin/persona_component_fixture.rs"

[lints.rust]
unused = "warn"
dead_code = "warn"

[patch.crates-io]
kameo = { git = "https://github.com/LiGoldragon/kameo.git", branch = "main" }
